Switched the homepage URL

--- a/nav-es.html
+++ b/nav-es.html
@@ -6,7 +6,7 @@
 <body bgcolor=white background="./backgrounds/citrus.gif" lang=ES
 link="#33cc00" vlink="#ff6633" style='tab-interval:.5in'>
 <table boder=0><tr valign="center">
-<td><a href="/wp" target="_top"><img src="home.png"/></a></td>
+<td><a href="/index-es.html" target="_top"><img src="home.png"/></a></td>
 <td><a href="index-en.html" target="_top"><img src="us.png"  alt="English"/></a></td>
 </tr></table>
 <hr/>
